feat: added create shopping cart endpoint
