# backend/internal/shoppingcarts/model.go
@@ -1,17 +1,53 @@
 package shoppingcarts
 
-import "github.com/google/uuid"
+import (
+	"github.com/KochKevin/effective-spoon-v2/internal/money"
+	"github.com/KochKevin/effective-spoon-v2/internal/products"
+	"github.com/google/uuid"
+)
 
-type Product struct{
-	Id uuid.UUID
-	Name string
-	Price int
+type ShoppingCart struct {
+	Id        uuid.UUID
+	lineItems []lineItem
 }
 
-func NewProduct(id uuid.UUID, name string, price int) Product {
-	return Product{
-		Id: id,
-		Name: name,
-		Price: price,
+func (s *ShoppingCart) GetFullPrice() money.Money {
+	var total money.Money
+
+
+	for _, item := range s.lineItems{
+		total.Add(item.GetPrice())
+	}
+
+	return total
+}
+
+func ShoppingCartFrom(id uuid.UUID, lineItems []lineItem) ShoppingCart {
+	return ShoppingCart{
+		Id:        id,
+		lineItems: lineItems,
+	}
+}
+
+func NewShoppingCart() ShoppingCart {
+	return ShoppingCart{
+		Id:        uuid.New(),
+		lineItems: nil,
+	}
+}
+
+type lineItem struct {
+	Product products.Product
+	Amount  int
+}
+
+func (l *lineItem) GetPrice() money.Money {
+	return money.MoneyFrom(l.Product.Price * l.Amount)
+}
+
+func NewLinteItem(product products.Product, amount int) lineItem {
+	return lineItem{
+		Product: product,
+		Amount:  amount,
 	}
 }
